<resources>
    <string name="app_name">DrSafe1.0</string>
    <string name="setting">Setting</string>
    <string name="dr_safe_tagline" translatable="false">나의 안전운전 지킴이</string>
    <string name="terms_title" translatable="false">Terms &amp; Condition</string>
    <string name="terms_of_register_title" translatable="false">Terms of register</string>
    <string name="terms_of_register_agree" translatable="false">I agree with the terms of register.</string>
    <string name="terms_collecting_private_info_title" translatable="false">Terms of collecting to private info</string>
    <string name="terms_collecting_private_info_agree" translatable="false">I agree with the collecting about private info.</string>
    <string name="terms_privacy_commission_title" translatable="false">Information about the privacy commission</string>
    <string name="terms_privacy_commission_agree" translatable="false">I agree with the information about the privacy commission.</string>
    <string name="terms_agree_all" translatable="false">I agree with all of the terms</string>
    <string name="i_agree_with_all_of_the_terms" translatable="false">I agree with all of the terms</string>
    <string name="i_agree_with_the_collecting_about_private_info" translatable="false">I agree with the collecting about private info.</string>
    <string name="search" translatable="false">Search</string>
    <string name="downloaded_nvideo_list" translatable="false">Downloaded\nVideo List</string>
    <string name="size" translatable="false">Size</string>
    <string name="driving" translatable="false">Driving</string>
    <string name="event" translatable="false">Event</string>
    <string name="downloading_data" translatable="false">Downloading Data</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="db_update">DB Update</string>
    <string name="device">Device Settings</string>
    <string name="vin_code">VIN CODE</string>
    <string name="obd_setting">OBD Setting</string>
    <string name="version">Version</string>
    <string name="lastest_version">Lastest Version</string>
    <string name="update_notification">Update Notification</string>
    <string name="auto_update">Auto Update</string>
    <string name="update">Update</string>
    <string name="updating">Updating...</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="tv_cannot_stop">Can not stop during calibration</string>
    <string name="ok_c">OK</string>
    <string name="this_is_latest_version">This is the latest version</string>
    <string name="volume">Volume</string>
    <string name="schoolzonespeedcontrol_onoff">schoolzone_speed_control</string>
    <string name="speedlimitenforcement_camera_onoff">Speed limit enforcement camera control</string>
    <string name="auto_speed_control">Speed Control</string>
    <string name="speed_limitaion_alarm">Speed Limitation Alarm</string>
    <string name="calibration">Calibration</string>
    <string name="sudden_acceleration">Sudden acceleration \n sensitivity</string>
    <string name="initialization">Initialization</string>
    <string name="baudrate">Baudrate</string>
    <string name="speed">SPEED</string>
    <string name="can_mode">CAN MODE</string>
    <string name="rpm">RPM</string>
    <string name="brake">BRAKE</string>
    <string name="can_type">CAN</string>
    <string name="line_type">LINE Type</string>
    <string name="speed_factor">Speed Factor</string>
    <string name="rpm_factor">RPM Factor</string>
    <string name="signal">Signal</string>
    <string name="normal">Normal</string>
    <string name="silent">Silent</string>
    <string name="low">-</string>
    <string name="high">+</string>
    <string name="save">SAVE</string>
    <string name="vin_code_c">VIN CODE</string>
    <string name="save_changes">Save Changes</string>
    <string name="ble_firmware_update">BLE Firmware Update</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="Preparing_for_OTA">Preparing for OTA</string>
    <string name="chek_internet_connection">Please check internet connection</string>
    <string name="new_database_version_available">New database version available, Please update it.</string>
    <string name="connecting">Connecting...</string>
    <string name="enable_location_permission">Please enable location permission for scan neearby devices from App permissions</string>
    <string name="enable_location_setting">Enable location settings</string>
    <string name="enable_bluetooth">Please enable bluetooth</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_vincode">Enter VIN CODE</string>
    <string name="enter_speed_factor">Enter Speed Factor</string>
    <string name="enter_rpm_factor">Enter RPM Factor</string>
    <string name="write_success">Write Success</string>
    <string name="write_fail">Write Fail</string>
    <string name="firmware_update_fail">Firmware update fail</string>
    <string name="database_update_fail">Database update fail</string>
    <string name="vincode_validation">VIN CODE must be in 17 characters</string>
    <string name="update_file_not_found">Update file not found</string>
    <string name="ota_service_not_found">OTA service not found</string>
    <string name="tv_status_delete">All files will be deleted. \n Are you sure you want to format?</string>
    <string name="refresh_device">Refresh device...</string>
    <string name="callibration_success">Calibration success</string>
    <string name="Memoryformat_success">Memory format was successfully completed</string>
    <string name="Memoryformat_failure">"Memory format did not complete successfully."</string>
    <string name="Memoryformat_progress">"Memory format in progress..."</string>
    <string name="filenotfound">"File not found"</string>
    <string name="dloadcancel">"Download cancelled:"</string>
    <string name="dloadexception">"Download Failed"</string>
    <string name="notreadstorage">"Can not read external storage"</string>
    <string name="storagereadonly">"ExternalStorage Read Only!"</string>
    <string name="weberror">"Webservice Error : "</string>
    <string name="webresponse">"Webservice response: "</string>
    <string name="JSONException">"JSONException: "</string>
    <string name="CheckInternetConnection">"Check Internet connection"</string>
    <string name="sppservicenotfound">"spp service not found"</string>
    <string name="sppcharnotfound">"spp char not found"</string>
    <string name="Exception">"Exception"</string>
    <string name="Enablenotifyfail">"Enable notify fail response from device"</string>
    <string name="GPS_signal">GPS Signal</string>
    <string name="brake_status">Brake Status</string>
    <string name="calibraion_confim_message">Calibration is in progress.. \n\n keep the key ON and\n stop Engine start</string>
    <string name="calibration_accel">\n At next view, \nRepeat steps on/off the accelerator \n 7 more than times to the maximum</string>
    <string name="calibration_success">Calibration was successfully completed</string>
    <string name="calibration_fail">"Calibration did not complete successfully."</string>
    <string name="check">Check</string>
    <string name="in_calibration">\n Calibration... \n Repeat steps on/off the accelerator \n 7 more than to the maximum</string>
    <string name="tv_lastest_version">This is the latest version</string>
    <string name="tv_lastest_not_version">This is not latest version.</string>
    <string name="tv_lastest_not_map_version">This is not latest version.</string>
    <string name="tv_not_latest_ble">This is not latest version.\nUpdate require approximately 3 minutes.\n\nAn error occurs when forced shutdown before update is complete, and product replacement is required.</string>
    <string name="updating_ble">updating... \n\nUpdating require approximately 3 minutes. \n\nAn error occurs when forced shutdown before update is complete, and product replacement is required.</string>
    <string name="scan">SCAN</string>
    <string name="select_mode">Latest phones mode(1 time) </string>
    <string name="item_save">The setting items have been saved.</string>
    <string name="obd_warning">Save failure / Please write speedFactor and rpmFactor to one digit below the decimal point. </string>
    <string name="spp_warning">spp 문자 찾지 못했습니다. </string>
    <string name="spp_warning2">spp service not found, refreshing device cache </string>
    <string name="device_err">An exception occured while refreshing device </string>
    <string name="mode_changesuccess">download mode sucess </string>
    <string name="apply">Apply</string>
    <string name="please_set_rpm_value">Please setting RPM value</string>
    <string name="please_set_speed_value">Please setting Speed value</string>
    <string name="rpm_alert">Be sure to read "" to apply the RPM control settings. </string>
    <string name="speed_alert">Be sure to read "" to apply the speed control setting.</string>
    <string name="enable_autospeed_control_alert">Autonomous Speed is ON, \n Available </string>
    <string name="enable_pua_control_alert">Functions available when PUA control is ON </string>
    <string name="rpm_range_wrong">ERROR: RPM is wrong </string>
    <string name="speed_range_wrong">Error: Speed is wrong (10~255) </string>
    <string name="speed_is_greater_then_5">Speed is >Please set it after stopping the vehicle.</string>
    <string name="failure">failure</string>
    <string name="userid_reset_alert">Do you want to reset user id?</string>
    <string name="userid_reset">User ID Reset</string>
    <string name="speed_control">Max SPEED \nControl</string>
    <string name="rpm_control">Max RPM \nControl</string>
    <string name="version_info">Version</string>
    <string name="Connect">Connect</string>
    <string name="obd_rev">Receiving</string>
    <string name="obd_on">Checking</string>
    <string name="vechicle_manufacturer">Vehicle \nManufacturer</string>
    <string name="speed_control_sensitivity">Autonomous speed control sensitivity</string>
    <string name="camera_range_control">Speed camera detection sensitivity</string>
    <string name="huyndai_kia">HYUNDAI_KIA</string>
    <string name="gmdaewoo">GENERAL_MOTOR_CAR_MODEL</string>
    <string name="samsung">SAMSUNG_MOTOR_CAR_MODEL</string>
    <string name="ssangyong">SSANGYONG_MOTOR_CAR_MODEL</string>
    <string name="toyota">TOYOTA_MOTOR_CAR_MODEL</string>
    <string name="volkswagen">VOLKSWAGEN_CAR_MODEL</string>
    <string name="nissan">NISSAN_MOTOR_CAR_MODEL</string>
    <string name="benz">MERCEDES_BENZ_CAR_MODEL</string>
    <string name="peugeot">PEUGEOT_CITROEN_CAR_MODEL</string>
    <string name="vechicle_manufacturer_speed_0">The manufacturer setting is changed in case of speed zero</string>
    <string name="vechicle_manufacturer_error">The manufacturer setting error </string>
    <string name="hint_vehicle_number">Vehicle Number</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_memo">Memo</string>
    <string name="next">Next</string>
    <string name="kisa_3_0" translatable="false">KISA 3.0</string>
    <string name="login_to_sky_kisa3_0">Login to Sky KISA3.0</string>
    <string name="kakao_login">Kakao Login</string>
    <string name="google_login">Google Login</string>
    <string name="email">Email</string>
    <string name="register_user">Register User</string>
    <string name="data_update">Data Update</string>
    <string name="event_update">Event Update</string>
    <string name="log_view">Log VIEW</string>
    <string name="event_view">Event VIEW</string>
    <string name="logout">Logout</string>
    <string name="ble_connection">BLE Connection</string>
</resources>