<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/register_main"
        android:orientation="vertical"
        tools:context="com.axon.kisa10.activity.RegisterUserActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/register_toolbar_color"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/notoaans_bold"
                android:text="@string/register_user"
                android:textColor="@color/gray_400"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:background="@color/register_main"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edVehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/tmap_48dp"
                android:background="@drawable/register_edittext_bg"
                android:fontFamily="@font/notosans_medium"
                android:hint="@string/hint_vehicle_number"
                android:inputType="text"
                android:autofillHints="phone"
                android:padding="16dp"
                android:textColor="@color/gray_100"
                android:textColorHint="@color/gray_400" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/tmap_48dp"
                android:autofillHints="username"
                android:background="@drawable/register_edittext_bg"
                android:fontFamily="@font/notosans_medium"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="@color/gray_100"
                android:textColorHint="@color/gray_400" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/tmap_48dp"
                android:background="@drawable/register_edittext_bg"
                android:fontFamily="@font/notosans_medium"
                android:hint="@string/email"
                android:visibility="gone"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/gray_100"
                android:textColorHint="@color/gray_400" />

            <EditText
                android:id="@+id/edPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/tmap_48dp"
                android:background="@drawable/register_edittext_bg"
                android:gravity="center_vertical"
                android:hint="@string/hint_phone_number"
                android:autofillHints="phone"
                android:inputType="phone"
                android:padding="16dp"
                android:textColor="@color/gray_100"
                android:textColorHint="@color/gray_400" />

            <EditText
                android:id="@+id/edMemo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/tmap_48dp"
                android:background="@drawable/register_edittext_bg"
                android:fontFamily="@font/notosans_medium"
                android:gravity="top"
                android:hint="@string/hint_memo"
                android:autofillHints="name"
                android:inputType="textMultiLine"
                android:maxLength="30"
                android:padding="16dp"
                android:singleLine="false"
                android:textColor="@color/gray_100"
                android:textColorHint="@color/gray_400" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:background="@drawable/register_edittext_bg"
            android:fontFamily="@font/notosans_medium"
            android:text="@string/next"
            android:textColor="@color/gray_300" />


    </LinearLayout>
</layout>
